added email icon, fixed name text

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 
 		<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'>
 
-		<link href="Outage.ttf" rel="stylesheet" type="text/css">
+		<!--<link href="Outage.ttf" rel="stylesheet" type="text/css">-->
 
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		
@@ -26,13 +26,14 @@
 		
 		<div id="top">
 			
-			<h1 id="name">Jordan Kamin <span id="game">| JAVASCRIPT. HTML/CSS. DESIGN. |</span></h1>
+			<h1 id="name">JORDAN A. KAMIN<span id="game">| JAVASCRIPT. HTML/CSS. DESIGN. |</span></h1>
 			
 			
 			<div id="social">
 				<a id="facebook" class="social" href="https://www.facebook.com/jordan.kamin"><img src="images/facebook-32.png"></a>
 				<a id="google" class="social" href="https://plus.google.com/+JordanKamin/posts"><img src="images/googleplus-32.png"></a>
 				<a id="linkedin" class="social" href="http://www.linkedin.com/in/jordankamin/"> <img src="images/linkedin-32.png"></a>
+				<a id="email" class="social" href="mailto:jordanakamin@gmail.com" > <img src="images/email-32.png"/></a>
 			</div>
 			
 				<!--<form id="nav">
