--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 
 		<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'>
 
-		<!--<link href="Outage.ttf" rel="stylesheet" type="text/css">-->
+		<link href="Outage.ttf" rel="stylesheet" type="text/css">
 
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		
